# terraform-aws-ekg

./: .gitignore  .rustfmt.toml  .terraformignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  aws-archive-file.tf  aws-cloudwatch.tf  aws-iam-policy-assume-role-sfn.tf  aws-iam-policy-assume-role.tf  aws-iam-policy-cloudwatch-writer.tf  aws-iam-policy-lfn-check.tf  aws-iam-policy-lfn-invoke.tf  aws-iam-policy-lfn-load.tf  aws-iam-policy-s3-to-sns.tf  aws-iam-policy-sfn.tf  aws-iam-role-lambda.tf  aws-iam-role-lfn-check.tf  aws-iam-role-lfn-invoke.tf  aws-iam-role-lfn-load.tf  aws-iam-role-sfn.tf  aws-iam-role-sns-feedback.tf  aws-lambda-check.tf  aws-lambda-function.tf  aws-lambda-invoke.tf  aws-lambda-load.tf  aws-lambda-zip-check.tf  aws-lambda-zip-invoke.tf  aws-lambda-zip-invoke.tf-python  aws-lambda-zip-load.tf  aws-s3-logging.tf  aws-s3-notification.tf  aws-s3.tf  aws-sfn-state-machine.tf  aws-sns-topic.tf  ekgf-make.mk  locals.tf  outputs.tf  pyproject.toml  (+4 more)
.cargo/: config.toml
.github/workflows/: build.yml
.run/: Test tests__invoke.run.xml
crate/ekg-aws-util/: Cargo.toml
crate/ekg-aws-util/src/: http.rs  lib.rs  s3.rs  sdk_config.rs  serde_util.rs  sns.rs  tests.rs  tls_connector.rs
crate/ekg-aws-util/src/lambda/: classes.rs  error.rs  mod.rs  response.rs  status.rs
crate/ekg-aws-util/src/neptune/: load_request.rs  mod.rs  neptune_data_config.rs  sparql_client.rs
crate/ekg-error/: Cargo.toml
crate/ekg-error/src/: lib.rs
crate/ekg-identifier/: Cargo.toml
crate/ekg-identifier/src/: ekg_identifier_context.rs  lib.rs
crate/ekg-lfn-check/: Cargo.toml  Makefile  event.json
crate/ekg-lfn-check/src/: clients.rs  lib.rs  main.rs  request.rs  tests.rs
crate/ekg-lfn-invoke/: Cargo.toml  Makefile
crate/ekg-lfn-invoke/src/: main.rs  request.rs  sfn_input.rs  sfn_state_machine.rs  tests.rs
crate/ekg-lfn-load/: Cargo.toml  Makefile  event.json
crate/ekg-lfn-load/src/: main.rs  request.rs  response.rs  tests.rs
crate/ekg-namespace/: Cargo.toml  README.md
crate/ekg-namespace/src/: class.rs  graph.rs  lib.rs  namespace.rs  predicate.rs  term.rs
crate/ekg-namespace/src/consts/: classes.rs  consts.rs  mod.rs  namespaces.rs  predicates.rs  prefixes.rs  sparql.rs
crate/ekg-namespace/src/literal/: id_url_display.rs  mod.rs  tests.rs  this.rs  value.rs
crate/ekg-sparql/: Cargo.toml
crate/ekg-sparql/src/: client.rs  flavor.rs  lib.rs  statement_type.rs  tests.rs
crate/ekg-sparql/src/parser/: mod.rs  test_select_statement.sparql  test_update_statement.sparql  test_update_statement_with_encode_for_uri_issue.sparql  tests.rs
crate/ekg-sparql/src/prefixes/: builder.rs  declare_result.rs  mod.rs
crate/ekg-sparql/src/statement/: mod.rs  tests.rs
crate/ekg-util/: Cargo.toml  Makefile
crate/ekg-util/src/: env.rs  lib.rs  serde_util.rs  tls_config.rs  tls_connector.rs  tracing.rs
crate/ekg-util/src/iri/: base.rs  mod.rs  owned.rs
crate/invoke/: Cargo.toml  Makefile
crate/invoke/src/: main.rs  tests.rs
crate/requests/: Cargo.toml
crate/requests/src/: aws_neptune_load_request.rs  invoke_request.rs  lib.rs  s3.rs
lambda/: README.md  __init__.py
lambda/check/: README.md  build.sh  build_and_zip.sh  event.json  lambda_function.py  lambda_function.test.py  pyproject.toml
lambda/invoke/: .gitignore  Makefile  README.md  build.sh  build_and_zip.sh  check_context.py  check_environment.py  check_event.py  constants.py  lambda_function.py  lambda_function.test.py  pyproject.toml
lambda/load/: .gitignore  README.md  lambda_function.py  lambda_function.test.py  pyproject.toml
lambda/rdf-load/: .gitignore  Makefile  README.md  build.sh  lambda_function.py  lambda_function.test.py  pyproject.toml
