[package]
name = "ekg-error"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", features = ["log"] }
thiserror = "1.0.51"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
serde_path_to_error = { version = "0.1.11", optional = true }
lambda_runtime = { version = "0.8.3", optional = true }
#tracing-wasm = { version = "0.2.1", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
#tracing-log = { version = "0.1.3", optional = true, features = ["env_logger"] }
iri-string = { version = "0.7.0", features = ["serde", "alloc"], optional = true }
rdf-store-rs = { version = "0.0.9", default-features = false, features = ["serde"], optional = true }
ignore = { version = "0.4.21", optional = true }
iref = { version = "3.1.3", features = ["serde"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.spargebra]
version = "0.2.7"
optional = true

[features]
default = ["serde", "aws-lambda-runtime"]
aws-lambda-runtime = ["lambda_runtime", "serde"]
serde = ["dep:serde", "dep:serde_json", "dep:serde_path_to_error"]
iri-string = ["dep:iri-string"]
iref = ["dep:iref"]
rdf-store = ["rdf-store-rs"]
sparql = ["spargebra"]
fs = ["ignore"]
