[package]
name = "ekg-identifier"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ekg-error.workspace = true
ekg-util.workspace = true
ekg-namespace.workspace = true

[dev-dependencies]
test-log.workspace = true
tracing-subscriber.workspace = true
