[package]
name = "ekg-lfn-check"
description = "AWS Lambda function to check whether the Amazon Neptune bulk loader function has finished loading a given RDF file"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
lambda_runtime.workspace = true
aws-config.workspace = true
aws-types.workspace = true
aws-smithy-runtime-api.workspace = true
aws-sdk-neptunedata.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true
tokio.workspace = true
unreachable.workspace = true
simple-error.workspace = true
ekg-error.workspace = true
ekg-identifier.workspace = true
ekg-util.workspace = true
ekg-aws-util.workspace = true
ekg-lfn-load.workspace = true

[dev-dependencies]
test-log.workspace = true
tracing-subscriber.workspace = true
