[package]
name = "ekg-lfn-load"
description = "AWS Lambda function to invoke the Amazon Neptune bulk loader function to load a given RDF file into the specified Neptune cluster."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
lambda_runtime.workspace = true
aws-config.workspace = true
aws-types.workspace = true
aws-smithy-runtime-api.workspace = true
aws-sdk-neptunedata.workspace = true
serde_json.workspace = true
config.workspace = true
tokio.workspace = true
serde.workspace = true
unreachable.workspace = true
simple-error.workspace = true
ekg-error = { path = "../ekg-error" }
ekg-identifier = { path = "../ekg-identifier" }
ekg-util = { path = "../ekg-util" }
requests = { path = "../requests" }

[dev-dependencies]
test-log.workspace = true
tracing-subscriber.workspace = true
