[package]
name = "ekg-lfn-load"
description = "AWS Lambda function to invoke the Amazon Neptune bulk loader function to load a given RDF file into the specified Neptune cluster."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
lambda_runtime.workspace = true
indoc.workspace = true
tokio.workspace = true
aws-sdk-neptunedata.workspace = true
ekg-aws-util.workspace = true
ekg-identifier.workspace = true
ekg-util.workspace = true
ekg-sparql.workspace = true
ekg-namespace.workspace = true

[dev-dependencies]
test-log.workspace = true
tracing-subscriber.workspace = true