[package]
name = "ekg-namespace"
description = "All standard EKG namespaces and OWL axiom IRIs for EKG"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
lazy_static.workspace = true
const_format.workspace = true
ekg-error.workspace = true
hyper.workspace = true
chrono.workspace = true
num_enum.workspace = true
phf.workspace = true
fancy-regex.workspace = true
mime.workspace = true
serde.workspace = true
serde_urlencoded.workspace = true
fluent-uri.workspace = true

[dev-dependencies]
test-log.workspace = true
tracing-subscriber.workspace = true
