[package]
name = "ekg-sparql"
description = "SPARQL utility functions"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ekg-namespace.workspace = true
ekg-error.workspace = true
ekg-util.workspace = true
tracing.workspace = true
lazy_static.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
indoc.workspace = true
fancy-regex.workspace = true
spargebra.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
fluent-uri.workspace = true

[dev-dependencies]
test-log.workspace = true
tokio.workspace = true
