[package]
name = "ekg-util"
description = "A library with some low-level simple utility functions used by the other ekg-* crates"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
lambda_runtime.workspace = true
aws-config.workspace = true
aws-types.workspace = true
aws-smithy-runtime-api.workspace = true
aws-sdk-neptunedata.workspace = true
serde.workspace = true
serde_json.workspace = true
ekg-error.workspace = true

[dev-dependencies]
test-log.workspace = true
tracing-subscriber.workspace = true
