[package]
name = "requests"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.8.3"
serde_json = "1.0.108"
config = "0.13.4"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = "1.0.193"
unreachable = "1.0.0"
simple-error = "0.3.0"

[dev-dependencies]
test-log = { version = "0.2.14", features = ["trace"] }


